# BenchMac

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  codecov.yml  pyproject.toml  test-instance.py
.github/workflows/: ci.yml
analysis/: .gitignore  README.MD  analysis.ipynb  analysis.py  diff_utils.py  prompt.py  report.py  trace_analyzer.py
data/: instances.jsonl  instances.jsonl.bak  silver_submissions.jsonl
data/dockerfiles/: akveo__ngx-admin_v15_to_v16  gothinkster__angular-realworld-example-app_v11_to_v12  gothinkster__angular-realworld-example-app_v12_to_v13  gothinkster__angular-realworld-example-app_v13_to_v14  gothinkster__angular-realworld-example-app_v14_to_v15  gothinkster__angular-realworld-example-app_v15_to_v16  gothinkster__angular-realworld-example-app_v16_to_v17  gothinkster__angular-realworld-example-app_v17_to_v18  gothinkster__angular-realworld-example-app_v18_to_v19  gothinkster__angular-realworld-example-app_v19_to_v20  onehungrymind__fem-production-angular_v10_to_v11
data/silver_patches/: angular2-hn_v10_to_v11.patch  angular2-hn_v11_to_v12.patch  angular2-hn_v12_to_v13.patch  angular2-hn_v13_to_v14.patch  angular2-hn_v14_to_v15.patch  angular2-hn_v15_to_v16.patch  angular2-hn_v16_to_v17.patch  angular2-hn_v17_to_v18.patch  angular2-hn_v18_to_v19.patch  angular2-hn_v9_to_v10.patch  gothinkster__angular-realworld-example-app_v11_to_v12.patch  gothinkster__angular-realworld-example-app_v12_to_v13.patch  gothinkster__angular-realworld-example-app_v13_to_v14.patch  gothinkster__angular-realworld-example-app_v14_to_v15.patch  gothinkster__angular-realworld-example-app_v15_to_v16.patch  gothinkster__angular-realworld-example-app_v16_to_v17.patch  gothinkster__angular-realworld-example-app_v17_to_v18.patch  gothinkster__angular-realworld-example-app_v18_to_v19.patch  gothinkster__angular-realworld-example-app_v19_to_v20.patch  simple-benchmac-instance_v15_to_v16.patch  spring-petclinic_v10_to_v11.patch
docs/: add-new-instance.md  architecture.md  concepts.md  dataset.md  metrics.md  reproducibility.md  usage.md
experiments/: README.md  environment.py  logging_utils.py  models.py  run_experiment.py  storage.py  thesis-configs.yaml
experiments/agents/: base.py
experiments/agents/angular_schematics/: __init__.py  agent.py
experiments/agents/mini_swe_agent/: __init__.py  agent.py  environment.py  mini_swe_agent_config.yaml  tracing_model.py
experiments/agents/qwen_code/: __init__.py  agent.py  docker.py  environment.py
experiments/prompts/mini_swe_agent/: minimal.yaml
explorer/: README.md  app.py
explorer/pages/: 1_Experiments.py  2_Evaluations.py  3_Instance_Analysis.py
scripts/: clone_and_analyze_codebases.py  generate_silver_patches.py  generate_silvers.py  pin_docker_images.py  validate_instances.py
src/bench_mac/: __init__.py  cli.py  config.py  docker_manager.py  dockerfile_utils.py  environment.py  evaluator.py  executor.py  explorer_entry.py  logging_config.py  metrics.py  models.py  runner.py  trace_analyzer.py  utils.py  utils_jsonl.py  version.py
src/bench_mac/core/: config.py  logging_config.py  models.py  utils.py
src/bench_mac/docker/: builder.py  manager.py
src/bench_mac/domain/services/: ports.py
src/bench_mac/environments/: __init__.py  base.py  docker.py
src/bench_mac/evaluation/: __init__.py  evaluate_submission.py  metrics.py  trace_analyzer.py
src/bench_mac/harness/: __init__.py  runner.py  submission.py  workflow.py
src/bench_mac/infrastructure/docker/: environment_adapter.py
src/bench_mac/orchestration/: __init__.py  runner.py  submission.py
src/bench_mac/use_cases/: evaluate_submission.py
tests/: conftest.py  utils.py
tests/fixtures/: README.md  test_instances.jsonl
tests/fixtures/dockerfiles/: invalid-dockerfile-instance  test-instance-v15-to-v16  test-instance-v16-to-v17
tests/integration/: conftest.py  test_baseline_validation.py  test_docker_manager.py  test_docker_pipeline.py  test_evaluator.py  test_executor.py  test_git_diff_baseline.py  test_silver_validation.py
tests/unit/: test_dockerfile_utils.py  test_executor.py  test_metrics.py  test_models.py  test_runner.py  test_trace_analyzer.py
tests/unit/docker/: test_builder.py  test_manager.py
tests/unit/evaluation/: __init__.py  test_evaluate_submission.py
tests/unit/experiments/: __init__.py
tests/unit/use_cases/: test_evaluate_submission.py
